# music-generator

./: .gitignore  README.md  common.py  jtest.py  options.html  pyproject.toml  requirements.txt  xml_generator_music21.py  xml_generator_xmltree.py
output/: jtest.html  jtest.xml  music21_2025-01-27_09-51-16.xml.xml  xmltree_2025-01-27_09-51-02.xml
src/: chords.py  fcgen.py  fcset_gen.py  jtest.py  midi.py  score.py  server.py  styles.css  template.html  web.py
src/flashcard/: chords.py  chords_test.py  fcgen.py  fcgen_test.py  fcset_gen.py  score.py  score_test.py
